chore: debug card addition, design card pop-up